fix jump Mario

--- a/css/style.css
+++ b/css/style.css
@@ -292,13 +292,13 @@
 }
 
 @-webkit-keyframes jump {
-	0%, 20%, 50%, 80%, 100% {
+	0%, 20%, 60%, 80%, 100% {
 		transform: translateY(0);
 	}
-	40% {
-		transform: translateY(-4px);
+	30% {
+		transform: translateY(0px);
 	}
-	60% {
+	50% {
 		transform: translateY(-20px);
 	}
 }
@@ -308,7 +308,7 @@
 		transform: translateY(0);
 	}
 	40% {
-		transform: translateY(-20px);
+		transform: translateY(-38px);
 	}
 	60% {
 		transform: translateY(-10px);
